resolved Cropping issue

--- a/src/CustomVisuals/Published/KPITicker/style/visual.less
+++ b/src/CustomVisuals/Published/KPITicker/style/visual.less
@@ -181,7 +181,6 @@
 	overflow: hidden; 
 	position: relative;
 	width: 1200px;
-	left: -30px;
  }
  
 #wrapper1, #wrapper2 {
